2017-03-21  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSC] Optimize Number.prototype.toString on Int32 / Int52 / Double
        https://bugs.webkit.org/show_bug.cgi?id=167454

        Reviewed by Saam Barati.

        This patch improves Number.toString(radix) performance
        by introducing NumberToStringWithRadix DFG node. It directly
        calls the operation and it always returns String.

                                                       baseline                  patched

            stanford-crypto-sha256-iterative        45.130+-0.928             44.032+-1.184           might be 1.0250x faster

2017-03-21  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSC] Add JSPromiseDeferred::reject(ExecState*, Exception*) interface
        https://bugs.webkit.org/show_bug.cgi?id=169908

        Reviewed by Sam Weinig.

        To avoid calling reject(ExecState*, JSValue) with Exception* accidentally,
        we add a new interface reject(ExecState*, Exception*).
        Such an interface is already added in DOMPromise in WebCore.

        * runtime/JSInternalPromiseDeferred.cpp:
        (JSC::JSInternalPromiseDeferred::reject):
        * runtime/JSInternalPromiseDeferred.h:
        * runtime/JSPromiseDeferred.cpp:
        (JSC::JSPromiseDeferred::reject):
        * runtime/JSPromiseDeferred.h:

2017-03-21  Zan Dobersek  <zdobersek@igalia.com>

        [jsc] MacroAssemblerMIPS: implement the branchPtr(RelationalCondition, BaseIndex, RegisterID) overload.
        https://bugs.webkit.org/show_bug.cgi?id=169717

        Reviewed by Yusuke Suzuki.

        * assembler/MacroAssembler.h: Expose branchPtr() on MIPS as well.
        * assembler/MacroAssemblerMIPS.h:
        (JSC::MacroAssemblerMIPS::branchPtr): Added.

        * dfg/DFGAbstractInterpreterInlines.h:
        (JSC::DFG::AbstractInterpreter<AbstractStateType>::executeEffects):
        * dfg/DFGByteCodeParser.cpp:
        (JSC::DFG::ByteCodeParser::handleIntrinsicCall):