@@ -1,3 +1,14 @@
+2017-03-21  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [ARM] Add missing MacroAssembler functions after r214187
+        https://bugs.webkit.org/show_bug.cgi?id=169912
+
+        Reviewed by Yusuke Suzuki.
+
+        * assembler/MacroAssemblerARM.h:
+        (JSC::MacroAssemblerARM::loadFloat):
+        (JSC::MacroAssemblerARM::storeFloat):
+
 2017-03-21  Yusuke Suzuki  <utatane.tea@gmail.com>
 
         [JSC] Optimize Number.prototype.toString on Int32 / Int52 / Double
